# fedora-pm

./: .editorconfig  .gitignore  BUILDING.md  BUILD_RPM_QUICKSTART.md  CHANGELOG_NEW_FEATURES.md  COMPLETE_UPDATE_SUMMARY.md  COPR_AUTH_FIX.md  COPR_UPLOAD_GUIDE.md  Cargo.toml  FEATURES.md  GAMING_META_QUICKSTART.md  GUI_CUSTOMIZATION.md  GUI_FEATURES.md  GUI_RPM_INSTALLATION.md  GUI_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_UNIFICATION_COMPLETE.md  INSTALLATION_UNIFICATION_SUMMARY.md  MIGRATION_COMPLETE.md  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  README-GUI.md  README.md  RELEASE_NOTES_v2.0.0.md  REPOSITORY_INFO.md  RPM_BUILD_GUIDE.md  SWEEP.md  build-gaming-meta.sh  build-gui-rpm.sh  build-rpm.sh  check-package-repos.sh  copr-rpm-upload-simple.sh  copr-rpm-upload.sh  copr-upload-simple.sh  copr-upload.sh  enable-repos.sh  fedora-gaming-meta-README.md  fedora-gaming-meta.spec  fedora-pm-copr.spec  fedora-pm-gui-launcher.py  (+13 more)
fedora-pm-cli-1.0.0/: fedora-pm
fedora_pm_gui/: __init__.py  gui.py  main.py
rpmbuild/RPMS/noarch/: fedora-pm-gui-1.0.0-1.fc43.noarch.rpm
rpmbuild/SPECS/: fedora-gaming-meta.spec  fedora-pm-gui-native.spec  fedora-pm-native.spec  fedora-pm.spec
src/: changelog.rs  config.rs  deps.rs  diskspace.rs  doctor.rs  download.rs  driver.rs  export.rs  flatpak.rs  gaming.rs  groups.rs  help.rs  history.rs  kernel.rs  main.rs  main.rs.backup  package.rs  repo.rs  rollback.rs  runner.rs  security.rs
