[package]
name = "fedora-pm"
version = "0.1.0"
edition = "2021"
description = "Fedora Package Manager rewritten in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

