[package]
name = "fedora-pm"
version = "1.1.0"
edition = "2021"
description = "Fedora Package Manager rewritten in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
indicatif = "0.17"
colored = "2.1"
log = "0.4"
env_logger = "0.11"

